tools/Caio.h

//共通関数
long WINAPI AioInit(char * DeviceName, short * Id);
long WINAPI AioExit(short Id);
long WINAPI AioResetDevice(short Id);
long WINAPI AioGetErrorString(long ErrorCode, char * ErrorString);
long WINAPI AioQueryDeviceName(short Index, char * DeviceName, char * Device);
long WINAPI AioGetDeviceType(char * Device, short * DeviceType);
long WINAPI AioSetControlFilter(short Id, short Signal, float Value);
long WINAPI AioGetControlFilter(short Id, short Signal, float *Value);
long WINAPI AioResetProcess(short Id);
//アナログ入力関数
long WINAPI AioSingleAi(short Id, short AiChannel, long * AiData);
long WINAPI AioSingleAiEx(short Id, short AiChannel, float * AiData);
long WINAPI AioMultiAi(short Id, short AiChannels, long * AiData);
long WINAPI AioMultiAiEx(short Id, short AiChannels, float * AiData);
long WINAPI AioGetAiResolution(short Id, short * AiResolution);
long WINAPI AioSetAiInputMethod(short Id, short AiInputMethod);
long WINAPI AioGetAiInputMethod(short Id, short * AiInputMethod);
long WINAPI AioGetAiMaxChannels(short Id, short * AiMaxChannels);
long WINAPI AioSetAiChannel(short Id, short AiChannel, short Enabled);
long WINAPI AioGetAiChannel(short Id, short AiChannel, short *Enabled);
long WINAPI AioSetAiChannels(short Id, short AiChannels);
long WINAPI AioGetAiChannels(short Id, short * AiChannels);
long WINAPI AioSetAiChannelSequence(short Id, short AiSequence, short AiChannel);
long WINAPI AioGetAiChannelSequence(short Id, short AiSequence, short * AiChannel);
long WINAPI AioSetAiRange(short Id, short AiChannel, short AiRange);
long WINAPI AioSetAiRangeAll(short Id, short AiRange);
long WINAPI AioGetAiRange(short Id, short AiChannel, short * AiRange);
long WINAPI AioSetAiTransferMode(short Id, short AiTransferMode);
long WINAPI AioGetAiTransferMode(short Id, short *AiTransferMode);
long WINAPI AioSetAiDeviceBufferMode(short Id, short AiDeviceBufferMode);
long WINAPI AioGetAiDeviceBufferMode(short Id, short *AiDeviceBufferMode);
long WINAPI AioSetAiMemorySize(short Id, long AiMemorySize);
long WINAPI AioGetAiMemorySize(short Id, long *AiMemorySize);
long WINAPI AioSetAiTransferData(short Id, long DataNumber, long *Buffer);
long WINAPI AioSetAiAttachedData(short Id, long AttachedData);
long WINAPI AioGetAiSamplingDataSize(short Id, short *DataSize);
long WINAPI AioSetAiMemoryType(short Id, short AiMemoryType);
long WINAPI AioGetAiMemoryType(short Id, short * AiMemoryType);
long WINAPI AioSetAiRepeatTimes(short Id, long AiRepeatTimes);
long WINAPI AioGetAiRepeatTimes(short Id, long * AiRepeatTimes);
long WINAPI AioSetAiClockType(short Id, short AiClockType);
long WINAPI AioGetAiClockType(short Id, short * AiClockType);
long WINAPI AioSetAiSamplingClock(short Id, float AiSamplingClock);
long WINAPI AioGetAiSamplingClock(short Id, float * AiSamplingClock);
long WINAPI AioSetAiScanClock(short Id, float AiScanClock);
long WINAPI AioGetAiScanClock(short Id, float * AiScanClock);
long WINAPI AioSetAiClockEdge(short Id, short AoClockEdge);
long WINAPI AioGetAiClockEdge(short Id, short * AoClockEdge);
long WINAPI AioSetAiStartTrigger(short Id, short AiStartTrigger);
long WINAPI AioGetAiStartTrigger(short Id, short * AiStartTrigger);
long WINAPI AioSetAiStartLevel(short Id, short AiChannel, long AiStartLevel, short AiDirection);
long WINAPI AioSetAiStartLevelEx(short Id, short AiChannel, float AiStartLevel, short AiDirection);
long WINAPI AioGetAiStartLevel(short Id, short AiChannel, long * AiStartLevel, short * AiDirection);
long WINAPI AioGetAiStartLevelEx(short Id, short AiChannel, float * AiStartLevel, short * AiDirection);
long WINAPI AioSetAiStartInRange(short Id, short AiChannel, long Level1, long Level2, long StateTimes);
long WINAPI AioSetAiStartInRangeEx(short Id, short AiChannel, float Level1, float Level2, long StateTimes);
long WINAPI AioGetAiStartInRange(short Id, short AiChannel, long *Level1, long *Level2, long *StateTimes);
long WINAPI AioGetAiStartInRangeEx(short Id, short AiChannel, float *Level1, float *Level2, long *StateTimes);
long WINAPI AioSetAiStartOutRange(short Id, short AiChannel, long Level1, long Level2, long StateTimes);
long WINAPI AioSetAiStartOutRangeEx(short Id, short AiChannel, float Level1, float Level2, long StateTimes);
long WINAPI AioGetAiStartOutRange(short Id, short AiChannel, long *Level1, long *Level2, long *StateTimes);
long WINAPI AioGetAiStartOutRangeEx(short Id, short AiChannel, float *Level1, float *Level2, long *StateTimes);
long WINAPI AioSetAiStopTrigger(short Id, short AiStopTrigger);
long WINAPI AioGetAiStopTrigger(short Id, short * AiStopTrigger);
long WINAPI AioSetAiStopTimes(short Id, long AiStopTimes);
long WINAPI AioGetAiStopTimes(short Id, long * AiStopTimes);
long WINAPI AioSetAiStopLevel(short Id, short AiChannel, long AiStopLevel, short AiDirection);
long WINAPI AioSetAiStopLevelEx(short Id, short AiChannel, float AiStopLevel, short AiDirection);
long WINAPI AioGetAiStopLevel(short Id, short AiChannel, long * AiStopLevel, short * AiDirection);
long WINAPI AioGetAiStopLevelEx(short Id, short AiChannel, float * AiStopLevel, short * AiDirection);
long WINAPI AioSetAiStopInRange(short Id, short AiChannel, long Level1, long Level2, long StateTimes);
long WINAPI AioSetAiStopInRangeEx(short Id, short AiChannel, float Level1, float Level2, long StateTimes);
long WINAPI AioGetAiStopInRange(short Id, short AiChannel, long *Level1, long *Level2, long *StateTimes);
long WINAPI AioGetAiStopInRangeEx(short Id, short AiChannel, float *Level1, float *Level2, long *StateTimes);
long WINAPI AioSetAiStopOutRange(short Id, short AiChannel, long Level1, long Level2, long StateTimes);
long WINAPI AioSetAiStopOutRangeEx(short Id, short AiChannel, float Level1, float Level2, long StateTimes);
long WINAPI AioGetAiStopOutRange(short Id, short AiChannel, long *Level1, long *Level2, long *StateTimes);
long WINAPI AioGetAiStopOutRangeEx(short Id, short AiChannel, float *Level1, float *Level2, long *StateTimes);
long WINAPI AioSetAiStopDelayTimes(short Id, long AiStopDelayTimes);
long WINAPI AioGetAiStopDelayTimes(short Id, long * AiStopDelayTimes);
long WINAPI AioSetAiEvent(short Id, HWND hWnd, long AiEvent);
long WINAPI AioGetAiEvent(short Id, HWND * hWnd, long * AiEvent);
long WINAPI AioSetAiEventSamplingTimes(short Id, long AiSamplingTimes);
long WINAPI AioGetAiEventSamplingTimes(short Id, long * AiSamplingTimes);
long WINAPI AioSetAiEventTransferTimes(short Id, long AiTransferTimes);
long WINAPI AioGetAiEventTransferTimes(short Id, long *AiTransferTimes);
long WINAPI AioStartAi(short Id);
long WINAPI AioStartAiSync(short Id, long TimeOut);
long WINAPI AioStopAi(short Id);
long WINAPI AioGetAiStatus(short Id, long * AiStatus);
long WINAPI AioGetAiSamplingCount(short Id, long * AiSamplingCount);
long WINAPI AioGetAiStopTriggerCount(short Id, long * AiStopTriggerCount);
long WINAPI AioGetAiTransferCount(short Id, long *AiTransferCount);
long WINAPI AioGetAiTransferLap(short Id, long *Lap);
long WINAPI AioGetAiStopTriggerTransferCount(short Id, long *Count);
long WINAPI AioGetAiRepeatCount(short Id, long * AiRepeatCount);
long WINAPI AioGetAiSamplingData(short Id, long * AiSamplingTimes, long * AiData);
long WINAPI AioGetAiSamplingDataEx(short Id, long * AiSamplingTimes, float * AiData);
long WINAPI AioResetAiStatus(short Id);
long WINAPI AioResetAiMemory(short Id);
//アナログ出力関数
long WINAPI AioSingleAo(short Id, short AoChannel, long AoData);
long WINAPI AioSingleAoEx(short Id, short AoChannel, float AoData);
long WINAPI AioMultiAo(short Id, short AoChannels, long * AoData);
long WINAPI AioMultiAoEx(short Id, short AoChannels, float * AoData);
long WINAPI AioGetAoResolution(short Id, short * AoResolution);
long WINAPI AioSetAoChannels(short Id, short AoChannels);
long WINAPI AioGetAoChannels(short Id, short * AoChannels);
long WINAPI AioGetAoMaxChannels(short Id, short * AoMaxChannels);
long WINAPI AioSetAoRange(short Id, short AoChannel, short AoRange);
long WINAPI AioSetAoRangeAll(short Id, short AoRange);
long WINAPI AioGetAoRange(short Id, short AoChannel, short * AoRange);
long WINAPI AioSetAoTransferMode(short Id, short AoTransferMode);
long WINAPI AioGetAoTransferMode(short Id, short *AoTransferMode);
long WINAPI AioSetAoDeviceBufferMode(short Id, short AoDeviceBufferMode);
long WINAPI AioGetAoDeviceBufferMode(short Id, short *AoDeviceBufferMode);
long WINAPI AioSetAoMemorySize(short Id, long AoMemorySize);
long WINAPI AioGetAoMemorySize(short Id, long *AoMemorySize);
long WINAPI AioSetAoTransferData(short Id, long DataNumber, long *Buffer);
long WINAPI AioGetAoSamplingDataSize(short Id, short *DataSize);
long WINAPI AioSetAoMemoryType(short Id, short AoMemoryType);
long WINAPI AioGetAoMemoryType(short Id, short * AoMemoryType);
long WINAPI AioSetAoRepeatTimes(short Id, long AoRepeatTimes);
long WINAPI AioGetAoRepeatTimes(short Id, long * AoRepeatTimes);
long WINAPI AioSetAoClockType(short Id, short AoClockType);
long WINAPI AioGetAoClockType(short Id, short * AoClockType);
long WINAPI AioSetAoSamplingClock(short Id, float AoSamplingClock);
long WINAPI AioGetAoSamplingClock(short Id, float * AoSamplingClock);
long WINAPI AioSetAoClockEdge(short Id, short AoClockEdge);
long WINAPI AioGetAoClockEdge(short Id, short * AoClockEdge);
long WINAPI AioSetAoSamplingData(short Id, long AoSamplingTimes, long * AoData);
long WINAPI AioSetAoSamplingDataEx(short Id, long AoSamplingTimes, float * AoData);
long WINAPI AioGetAoSamplingTimes(short Id, long * AoSamplingTimes);
long WINAPI AioSetAoStartTrigger(short Id, short AoStartTrigger);
long WINAPI AioGetAoStartTrigger(short Id, short * AoStartTrigger);
long WINAPI AioSetAoStopTrigger(short Id, short AoStopTrigger);
long WINAPI AioGetAoStopTrigger(short Id, short * AoStopTrigger);